public interface AvailabilityState {
    public AvailabilityState handleBooking();
}
